# SkogDataPy

./: .env-example  README.md  example_usage.ipynb  pyproject.toml
src/skogdata/: __init__.py  data.py  ftp.py  utils.py
tests/: test_connections.py  test_data.py
