[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skogdata"
version = "0.1.2"
description = "Facilitates the access to geospatial data about forests from specific providers, such as Skogsstyrelsen"
authors = [
  { name="Marco Della Vedova", email="marco.dellavedova@gmail.com" },
]
maintainers = [
  { name="Marco Della Vedova", email="marco.dellavedova@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "geopandas>=0.12.2",
  "rasterio>=1.3.4",
  "fiona>=1.9.0",
  "python-dotenv",
  "tqdm",
  "matplotlib"
]

[project.optional-dependencies]
test = ["pytest"]
all = ["skogdata[test]"]
